# compress

./: .gitignore  CLAUDE.md
.claude/: settings.json  settings.local.json
.github/workflows/: test.yml
Z/: ARCHITECTURE.md  MARKETING.md  NATIVE-GUIDE.md  NATIVE-PLAN.md  README.md  ROADMAP.md  god_view_analysis.md  implementation_plan.md  index.html  log.md  package-lock.json  package.json  pnpm-lock.yaml  project_analysis_report.md  vite.config.ts  vitest.config.ts
Z/.claude/: settings.local.json
Z/native-bridge/: background.js  extension-page.css  extension-page.html  extension-page.js  manifest.json
Z/native-host/: Cargo.toml  install-titan-host-mac.sh  install-titan-host.ps1  titan-host.json
Z/native-host/src/: main.rs
Z/public/: encoder-diag.html
Z/scratch/: compact_css.cjs
Z/src/: App.vue  piexifjs.d.ts  style.css  upng-js.d.ts  vite-env.d.ts
Z/src/components/: ActivationModal.vue  AuthModal.css  AuthModal.vue  ComparisonSlider.vue  Dashboard.css  Dashboard.vue  EmailUpdateModal.vue  GuideBubble.vue  ImageComparison.vue  ImageCompressor.vue  LoggerConsole.vue  VideoCompressor.vue
Z/src/composables/: useAuth.ts  useCompressGate.ts  useCompressionQueue.ts  useGlobalStats.ts  useModeToggle.ts  useOutputDir.ts  useUsageLimit.ts
Z/src/engine/: engine-router.ts  exif-preserve.ts  ffmpeg-engine.ts  gpu-pipeline.ts  image-engine.ts  logger.ts  native-host-engine.ts  processor.ts  storage-service.ts
Z/src/locales/: i18n.ts
Z/test/: exif-preserve.spec.ts  ffmpeg-args.spec.ts  ffmpeg-integration.spec.ts
docs/: exif-metadata-preservation.md
(+5 files in other folders)
