[package]
name = "titan-host"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "titan-host"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "io-std", "macros", "rt-multi-thread", "sync"] }
regex = "1"
walkdir = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true
